fix overflow content of dropdown

--- a/src/components/UI/Dropdown/Dropdown.scss
+++ b/src/components/UI/Dropdown/Dropdown.scss
@@ -39,7 +39,7 @@
         margin: 5px 0px;
         margin-right: 3px;
         display: none;
-        overflow: auto;
+        overflow-x: hidden;
         max-height: 150px;
     }
 
